<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#EFEFEF"
        app:cardCornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDetailsConstPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/price_p_ticket"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsConstTime"
                app:layout_constraintTop_toBottomOf="@+id/txtDetailsConstTime" />

            <TextView
                android:id="@+id/txtDetailsConstTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/movie_title"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDetailsConstRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/critics_rating"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsConstTitle"
                app:layout_constraintTop_toBottomOf="@+id/txtDetailsConstTitle" />

            <TextView
                android:id="@+id/txtDetailsConstDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/session_date"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsConstRating"
                app:layout_constraintTop_toBottomOf="@+id/txtDetailsConstRating" />

            <TextView
                android:id="@+id/txtDetailsConstTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/session_time"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsConstDate"
                app:layout_constraintTop_toBottomOf="@+id/txtDetailsConstDate" />

            <TextView
                android:id="@+id/txtDetailsPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#236826"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsTime"
                app:layout_constraintTop_toTopOf="@+id/txtDetailsConstPrice"
                tools:text="@sample/ticketExamples.json/price" />

            <TextView
                android:id="@+id/txtDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtDetailsConstTitle"
                app:layout_constraintTop_toTopOf="@+id/txtDetailsConstTitle"
                tools:text="@sample/ticketExamples.json/title" />

            <TextView
                android:id="@+id/txtDetailsRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsTitle"
                app:layout_constraintTop_toTopOf="@+id/txtDetailsConstRating"
                tools:text="@sample/ticketExamples.json/rating" />

            <TextView
                android:id="@+id/txtDetailsDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsRating"
                app:layout_constraintTop_toTopOf="@+id/txtDetailsConstDate"
                tools:text="@sample/ticketExamples.json/date" />

            <TextView
                android:id="@+id/txtDetailsTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtDetailsDate"
                app:layout_constraintTop_toTopOf="@+id/txtDetailsConstTime"
                tools:text="@sample/ticketExamples.json/time" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>