<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="#EFEFEF"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtOrderConstMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/ticket"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/txtOrderConstMoviePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:text="@string/price_p_unit"
                android:textColor="@color/purple_500"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtOrderConstMovieTitle" />

            <TextView
                android:id="@+id/txtOrderConstTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtOrderFullPrice"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <TextView
                android:id="@+id/txtOrderMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtOrderConstMovieTitle"
                app:layout_constraintTop_toBottomOf="@+id/txtOrderConstMovieTitle"
                tools:text="@sample/ticketExamples.json/title" />

            <TextView
                android:id="@+id/txtOrderMoviePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="#236826"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtOrderConstMoviePrice"
                app:layout_constraintTop_toBottomOf="@+id/txtOrderConstMoviePrice"
                tools:text="@sample/ticketExamples.json/price" />

            <TextView
                android:id="@+id/txtOrderFullPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textColor="#236826"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                tools:text="@sample/ticketExamples.json/price" />

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtOrderMovieTitle" />

            <Button
                android:id="@+id/buttonIncreaseQuantity"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="+"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/divider4"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/buttonDecreaseQuantity"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="-"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonIncreaseQuantity"
                app:layout_constraintTop_toTopOf="@+id/divider4"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txtOrderQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonDecreaseQuantity"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@sample/ticketExamples.json/quantity" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#4E2C8A"
                app:cardCornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/TextViewOrderConstTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/cart_order"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewOrderCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@sample/ticketExamples.json/code" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>